--- a/src/styles/registro.css
+++ b/src/styles/registro.css
@@ -1,10 +1,10 @@
-.login-container{
+.registro-container{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.login-container button {
+.registro-container button {
     display: block;
     margin: 2rem auto 0;
     padding: 0.6rem 1.2rem;
@@ -17,12 +17,12 @@
     transition: background-color 0.3s ease;
 }
 
-.login-container button:hover {
+.registro-container button:hover {
     background-color: var(--color-header);
     color: var(--color-separador);
 }
 
-.login-container input{
+.registro-container input{
     width: 30%;
     padding: 0.3rem;
     border-radius: 0.25rem;
@@ -31,10 +31,10 @@
     color: var(--color-separador);
 }
 
-.login-container label{
+.registro-container label{
     color: var(--color-separador);
 }
 
-.login-container h2{
+.registro-container h2{
     color: var(--color-separador);
-}   
+}
