--- a/src/styles/loginAdmin.css
+++ b/src/styles/loginAdmin.css
@@ -1,10 +1,10 @@
-.login-container{
+.login-admin-container{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.login-container button {
+.login-admin-container button {
     display: block;
     margin: 2rem auto 0;
     padding: 0.6rem 1.2rem;
@@ -15,15 +15,14 @@
     cursor: pointer;
     font-weight: bold;
     transition: background-color 0.3s ease;
-    max-width: 10rem;
 }
 
-.login-container button:hover {
+.login-admin-container button:hover {
     background-color: var(--color-header);
     color: var(--color-separador);
 }
 
-.login-container input{
+.login-admin-container input{
     width: 30%;
     padding: 0.3rem;
     border-radius: 0.25rem;
@@ -32,10 +31,10 @@
     color: var(--color-separador);
 }
 
-.login-container label{
+.login-admin-container label{
     color: var(--color-separador);
 }
 
-.login-container h2{
+.login-admin-container h2{
     color: var(--color-separador);
 }   
