--- a/src/styles/registro.css
+++ b/src/styles/registro.css
@@ -38,3 +38,23 @@
 .registro-container h2{
     color: var(--color-separador);
 }
+
+.input-password-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 31%;
+}
+
+.input-password-container input {
+    width: 100%;
+    padding-right: 40px;
+}
+
+.icon-eye {
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+    color: var(--color-separador);
+    font-size: 1.2rem;
+}
