--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -41,6 +41,7 @@
     border-radius: 0.5rem;
     color: var(--color-separador);
     font-weight: 500;
+
 }
 
 .admin-container button {
@@ -60,3 +61,11 @@
     background-color: var(--color-header);
     color: var(--color-separador);
 }
+
+.adminLink{
+    text-decoration: none;
+    color: inherit;
+    text-transform: none;
+
+}
+
