--- a/src/styles/productos.css
+++ b/src/styles/productos.css
@@ -39,7 +39,7 @@
     font-weight: bold;
     font-size: 1.1rem;
     color: var(--color-separador);
-    
+    text-transform: none;
 }
 
 .productos-boton{
