acomodamos las sweet

--- a/src/styles/ProductoDetalle.css
+++ b/src/styles/ProductoDetalle.css
@@ -88,8 +88,9 @@
     border: solid 1px var(--color-separador);
     border-radius: 0.3rem;
     color: var(--color-separador);
-    width: 13rem;
-
+    width: 14rem;
+    margin-right: 1rem;
+    padding: 0.6rem;
     cursor: pointer;
     font-weight: bold;
     transition: background-color 0.3s ease;
@@ -105,9 +106,10 @@
     border: solid 1px var(--color-separador);
     border-radius: 0.3rem;
     color: var(--color-separador);
-    width: 13rem;
+    width: 14rem;
     cursor: pointer;
     font-weight: bold;
+    padding: 0.6rem;
     transition: background-color 0.3s ease;
 }
 
