--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     background-color: var(--color-header);
-    padding: 0rem 1rem;
+    padding: 0rem;
     width: 100%;
     height: 5rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -47,7 +47,6 @@
     justify-content: center;
     align-items: center;
     height: 2rem;
-    padding: 0.2rem 1rem;
     width: 100%;
 }
 
@@ -83,8 +82,8 @@
 
 .carrito-contador {
     position: absolute;
-    top: -0.5rem;
-    right: -0.7rem;
+    top: 1.21rem;
+    right: 1rem;
     background-color: var(--color-separador);
     color: var(--color-header);
     font-size: 0.7rem;
@@ -114,4 +113,13 @@
     border: solid 1px var(--color-resenaPerse);
     border-radius: 4px;
     padding: 1px;
+}
+
+.nav-linkCarrito-link {
+    color: var(--color-separador);
+    margin-right: 0.3rem;
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 0.3rem;
 }
