--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,6 @@
 main{
-    padding: 20px;
-    justify-self: center; 
+    justify-self: center;
+    width: 100%;
 }
 
 main h2 {
@@ -17,7 +17,7 @@ main h2 {
 /* INICIO CSS CORTE*/
 .corte-info-card{
     padding: 0;
-    margin: 1rem auto;
+    margin: 2rem auto;
     color: var(--color-separador);
     text-transform: uppercase;
     font-size: small;
