--- a/src/styles/editarProducto.css
+++ b/src/styles/editarProducto.css
@@ -1,4 +1,4 @@
-form {
+.form {
     max-width: 500px;
     margin: 40px auto;
     padding: 30px;
@@ -10,9 +10,9 @@ form {
     gap: 20px;
 }
 
-form input[type="text"],
-form input[type="number"],
-form textarea {
+.form input[type="text"],
+.form input[type="number"],
+.form textarea {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -22,18 +22,18 @@ form textarea {
     transition: border-color 0.3s;
 }
 
-form input:focus,
-form textarea:focus {
-    border-color: #7a2d25;
+.form input:focus,
+.form textarea:focus {
+    border-color: var(--color-separador);
     outline: none;
 }
 
-form textarea {
+.form textarea {
     resize: vertical;
     min-height: 100px;
 }
 
-button[type="submit"] {
+.form button[type="submit"] {
     background-color: #7a2d25;
     color: white;
     padding: 12px;
@@ -44,7 +44,7 @@ button[type="submit"] {
     transition: background-color 0.3s ease;
 }
 
-button[type="submit"]:hover {
+.form button[type="submit"]:hover {
     background-color: #5c211c;
 }
 
