--- a/src/styles/productos.css
+++ b/src/styles/productos.css
@@ -12,7 +12,7 @@
 
 .productos-card{
     background-color: var(--color-fondo);
-    border: 2px solid var(--color-separador);
+    border: 1px solid var(--color-separador);
     border-radius: 8px;
     width: 15rem;
     text-align: center;
@@ -30,7 +30,7 @@
     object-fit: contain;
     background-color: white;
     margin-top: 3px;
-    border: 2px solid var(--color-separador);
+    border: 1px solid var(--color-separador);
     justify-self: center;
 }
 
@@ -59,4 +59,14 @@
     color: var(--color-separador);
 }
 
+h2 {
+    width: 100%;
+    background-color: var(--color-separador);
+    color: var(--color-fondo);
+    text-align: center;
+    height: 4rem;
+    align-content: center;
+    font-size: 2rem;
+    font-family: "Libre Caslon Text";
+    }
 
