--- a/src/styles/agregarProducto.css
+++ b/src/styles/agregarProducto.css
@@ -1,4 +1,4 @@
-.form-editar-producto {
+.form-agregar-producto {
     max-width: 500px;
     margin: 40px auto;
     padding: 30px;
@@ -55,13 +55,13 @@
     margin-top: 0.25rem;
 }
 
-.form-editar-producto label {
+.form-agregar-producto label {
     display: block;
     margin-bottom: 1rem;
 }
 
-.form-editar-producto input,
-.form-editar-producto textarea {
+.form-agregar-producto input,
+.form-agregar-producto textarea {
     width: 100%;
     padding: 0.5rem;
     margin-top: 0.25rem;
