--- a/src/styles/productos.css
+++ b/src/styles/productos.css
@@ -77,7 +77,6 @@
     color: var(--color-separador);
 }
 
-
 h2 {
     width: 100%;
     background-color: var(--color-separador);
@@ -89,3 +88,7 @@ h2 {
     font-family: "Libre Caslon Text";
     }
 
+h3{
+    font-size: 1.4rem;
+    
+}
