--- a/src/styles/ProductoDetalle.css
+++ b/src/styles/ProductoDetalle.css
@@ -22,7 +22,6 @@
     border-radius: 10px;
     object-fit: cover;
     border: solid 1px var(--color-separador);
-
 }
 
 .detalle-info {
@@ -31,8 +30,9 @@
     flex-direction: column;
     gap: 10px;
     color: var(--color-separador);
-
 }
+
+
 .detalle-info-peso {
     font-weight: bold;
     font-size: 1.5rem;
@@ -88,8 +88,9 @@
     border: solid 1px var(--color-separador);
     border-radius: 0.3rem;
     color: var(--color-separador);
-    width: 13.3rem;
+    width: 14rem;
     padding: 0.6rem;
+    margin-right: 1rem;
 
 
     cursor: pointer;
@@ -107,7 +108,7 @@
     border: solid 1px var(--color-separador);
     border-radius: 0.3rem;
     color: var(--color-separador);
-    width: 13.3rem;
+    width: 14rem;
     cursor: pointer;
     font-weight: bold;
     padding: 0.6rem;
