--- a/src/styles/registro.css
+++ b/src/styles/registro.css
@@ -15,6 +15,7 @@
     cursor: pointer;
     font-weight: bold;
     transition: background-color 0.3s ease;
+    max-width: 10rem;
 }
 
 .registro-container button:hover {
