--- a/src/styles/editarProducto.css
+++ b/src/styles/editarProducto.css
@@ -106,5 +106,8 @@ h2 {
     align-content: center;
     font-size: 2rem;
     text-transform: uppercase;
+}
 
+.h2-editar{
+    color: var(--color-header);
 }
