--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -42,24 +42,26 @@
     border-bottom: 1px solid currentColor;
 }
 
-.nav-barra-superior {
+.my-nav-barra-superior {
     background-color: var(--color-separador);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;  /* clave para posicionar hijos absolutos */
     height: 2rem;
     width: 100%;
 }
 
-.nav-barra-superior ul {
-    list-style: none;
+.my-nav-barra-superior ul {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     gap: 2rem;
     padding: 0;
     margin: 0;
+    list-style: none;
 }
 
-.nav-superior-link {
+
+.my-nav-superior-link {
     text-decoration: none;
     color: var(--color-header);
     font-size: 0.85rem;
@@ -69,7 +71,7 @@
     text-transform: uppercase;
 }
 
-.nav-superior-link:hover {
+.my-vnav-superior-link:hover {
     text-decoration: underline;
 }
 
@@ -122,4 +124,28 @@
     display: flex;
     align-items: center;
     gap: 0.3rem;
+}
+
+.my-nav-busqueda-container {
+    position: absolute;   /* para posicionar dentro del nav */
+    left: 0;              /* pegado a la izquierda */
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+}
+
+.nav-input-busqueda {
+    width: 200px;
+    padding: 4px 8px;
+    font-size: 0.8rem;
+    border: 1px solid var(--color-header);
+    border-radius: 4px;
+    background-color: var(--color-resenaPerse);
+    color: var(--color-header);
+}
+
+
+.nav-input-busqueda:focus {
+    border: 1px solid var(--color-resenaPerse);
 }
