--- a/src/styles/productos.css
+++ b/src/styles/productos.css
@@ -93,3 +93,55 @@ h3{
     font-size: 1.4rem;
     
 }
+
+/*MEDIA QUERYS*/
+
+@media (min-width: 992px) {
+    .productos-container {
+    grid-template-columns: repeat(4, 1fr);
+    width: 80%;          
+    }
+}
+
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .productos-container {
+    grid-template-columns: repeat(3, 1fr);
+    width: 90%;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .productos-container {
+    grid-template-columns: repeat(2, 1fr);
+    width: 95%;
+    } 
+}
+
+
+@media (max-width: 575.98px) {
+    .productos-container {
+    grid-template-columns: 1fr; 
+    width: 95%;
+    padding: 1rem;
+    }
+
+    .productos-card {
+    width: 100%;
+    }
+
+    .productos-boton-admin {
+    width: 100%;
+    margin: 0.5rem 0;
+    }
+
+    .paginador {
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    flex-wrap: wrap;
+    }
+    .paginador button {
+    padding: 0.4rem 0.8rem;
+    }
+}
